--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{margin: 0;padding: 0;box-sizing: border-box;}
-body{font-family: Arial, Helvetica, sans-serif;background-image: url(img/bg.png);color:#ffff;}
+body{font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;background-image: url(img/bg.png);color:#ffff;}
 
 .boxProduto img{width: 400px;}
 .logo{width: 250px;}
@@ -17,5 +17,5 @@ h1, h2{text-align: center;margin: 20px 0;}
 .boxImg img{width: 400px;}
 
 .btn{background-color: #FFAE00;padding: 20px;border: none;border-radius: 10px;color: #ffff;width: 150px;}
-.btn:hover{background-color: #a37104;transform: scale(1.05);}
+.btn:hover{background-color: #a37104;transform: scale(1.05);cursor: pointer;font-weight: bold;font-size: 20px;}
 h2{color: #FFAE00;}
